                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2019-05-10
 * Wing notifications (wing.info, wing.success, etc) have been upgraded to use Bootstrap Toasts. See WingVue.pod for usage notes.
 * You must upgrade to bootstrap-vue@2.0.0-rc.19 and bootstrap@4.3.1.
 * You can remove noty from wing_ui_css_requirements.tt and wing_ui_js_requirements.tt.

2019-05-08
 * Fixed bug with nulls in wing.vue.js.

2019-05-07
 * wing.vue.js post can properly handle a JSON blob on post.

2019-05-02
 * Pass thru unlogged methods to CHI.

2019-04-28
 * Use per-process cache object.

2019-04-27
 * Added cachelog subsystem. To use add "cachelog" : "log" to your config, or see Wing::Role::Result::CacheLog for a database log.
 * Added "flush" to wing command cache. Only works with FastMmap and MemcachedFast.

2019-04-26
 * Added a session id conflict check for better security auditing.

2019-04-15
 * Do not die in sending email jobs.  Just delete the job.

2019-04-09
 * Add additional debug for email problems.
 * Remove real_name/display_name from mkits due to unsafe characters.

2019-03-06
 * Increased the timeout of secondary auth to 30 minutes.
 * Made a better secondary auth email template.
 * Made secondary auth not get into an infinite loop.

2019-02-25
 * Added option to wing.object.save() in wing.vue.js.
 * Added wing-select-new directive to wing.vue.js.

2019-02-12
 * Added get_field_options() and format_field_options() to wing.vue.js.
 * Added format_objects_as_field_options() to object_list in wing.vue.js.

2019-02-05
 * Modified S3Image to allow verification of an image outside of the handle upload method.
 * Added the append() method to wing.object_list in wing.vue.js.